added book search

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control me-2" type="search" placeholder="Название книги" aria-label="Search" name="book_name">
             <button class="btn btn-outline-success" type="submit">Поиск</button>
           </form>
         </div>
